release 2.12.2
